{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 118,
  "lineage": "381d4e98-f940-d8d2-359b-c0ed0c0620a7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:940053359004:loadbalancer/app/th-insights-backend-alb/fee02ee58524cf00",
            "arn_suffix": "app/th-insights-backend-alb/fee02ee58524cf00",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-th-insights-backend-alb-1222633522.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:940053359004:loadbalancer/app/th-insights-backend-alb/fee02ee58524cf00",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "th-insights-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08d709182e66fcc8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057cc109e4e13ddd8"
              },
              {
                "subnet_id": "subnet-063c3a2fe1fd5a1b6"
              },
              {
                "subnet_id": "subnet-0f055b2bd5e5b2799"
              }
            ],
            "subnets": [
              "subnet-057cc109e4e13ddd8",
              "subnet-063c3a2fe1fd5a1b6",
              "subnet-0f055b2bd5e5b2799"
            ],
            "tags": {
              "Name": "th-insights-backend-alb"
            },
            "vpc_id": "vpc-06887a73b54135881",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:940053359004:loadbalancer/app/th-insights-frontend-alb/2711e3d783e18399",
            "arn_suffix": "app/th-insights-frontend-alb/2711e3d783e18399",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "th-insights-frontend-alb-2083123765.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:940053359004:loadbalancer/app/th-insights-frontend-alb/2711e3d783e18399",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "th-insights-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08d709182e66fcc8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057cc109e4e13ddd8"
              },
              {
                "subnet_id": "subnet-063c3a2fe1fd5a1b6"
              },
              {
                "subnet_id": "subnet-0f055b2bd5e5b2799"
              }
            ],
            "subnets": [
              "subnet-057cc109e4e13ddd8",
              "subnet-063c3a2fe1fd5a1b6",
              "subnet-0f055b2bd5e5b2799"
            ],
            "tags": {
              "Name": "th-insights-frontend-alb"
            },
            "vpc_id": "vpc-06887a73b54135881",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:940053359004:targetgroup/th-insights-backend-tg/1d8e2188011d76e2",
            "arn_suffix": "targetgroup/th-insights-backend-tg/1d8e2188011d76e2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:940053359004:targetgroup/th-insights-backend-tg/1d8e2188011d76e2",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:940053359004:loadbalancer/app/th-insights-backend-alb/fee02ee58524cf00"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "th-insights-backend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06887a73b54135881"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:940053359004:targetgroup/th-insights-frontend-tg/bdb9d9e8fbab6b28",
            "arn_suffix": "targetgroup/th-insights-frontend-tg/bdb9d9e8fbab6b28",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:940053359004:targetgroup/th-insights-frontend-tg/bdb9d9e8fbab6b28",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:940053359004:loadbalancer/app/th-insights-frontend-alb/2711e3d783e18399"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "th-insights-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06887a73b54135881"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "default_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:route-table/rtb-0b1e013013547223e",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0e3e6c6a6f6ff855c",
                "route_table_id": "rtb-0b1e013013547223e",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0b1e013013547223e",
            "owner_id": "940053359004",
            "route_table_id": "rtb-0b1e013013547223e",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-050d6bbcc1a8e4675"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-1f4489ef1a38ee510",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06887a73b54135881"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:security-group/sg-027a35265c428977a",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-027a35265c428977a",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06887a73b54135881"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:vpc/vpc-06887a73b54135881",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0aa5b97b602c39902",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0dc85f74ba2ce800f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06887a73b54135881",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b1e013013547223e",
            "owner_id": "940053359004",
            "tags": {
              "Name": "th-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_to_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b1e013013547223e179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1e013013547223e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-050d6bbcc1a8e4675"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.default_to_terraform",
            "data.aws_route_table.default_main",
            "data.aws_vpc.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terraform_to_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c3177adc9609e6093854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c3177adc9609e609",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-050d6bbcc1a8e4675"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.default_to_terraform",
            "data.aws_vpc.default",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:vpc-endpoint/vpce-0aa8fa7152d898ade",
            "dns_entry": [
              {
                "dns_name": "vpce-0aa8fa7152d898ade-kwlcohqk.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0aa8fa7152d898ade-kwlcohqk-us-west-2a.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0aa8fa7152d898ade-kwlcohqk-us-west-2b.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "api.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z00635472W2H3J34EKCA2"
              },
              {
                "dns_name": "ecr.us-west-2.api.aws",
                "hosted_zone_id": "Z006350221ZQNFM5EZG3C"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aa8fa7152d898ade",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-000b67cb7ebb49628",
              "eni-00ab09444eca93cb2"
            ],
            "owner_id": "940053359004",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-027a35265c428977a"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.64.157",
                "subnet_id": "subnet-0f055b2bd5e5b2799"
              },
              {
                "ipv4": "172.31.65.167",
                "subnet_id": "subnet-057cc109e4e13ddd8"
              }
            ],
            "subnet_ids": [
              "subnet-057cc109e4e13ddd8",
              "subnet-0f055b2bd5e5b2799"
            ],
            "tags": {
              "Name": "th-insights-ecr-api-endpoint-default"
            },
            "tags_all": {
              "Name": "th-insights-ecr-api-endpoint-default"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06887a73b54135881"
          },
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:vpc-endpoint/vpce-07a414f8c1722a478",
            "dns_entry": [
              {
                "dns_name": "vpce-07a414f8c1722a478-u2y5gagn.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-07a414f8c1722a478-u2y5gagn-us-west-2b.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-07a414f8c1722a478-u2y5gagn-us-west-2a.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z025321438N0ZFNELQOG5"
              },
              {
                "dns_name": "*.dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z025321438N0ZFNELQOG5"
              },
              {
                "dns_name": "dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z01101413I8RQG5QKIXZQ"
              },
              {
                "dns_name": "*.dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z01101413I8RQG5QKIXZQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07a414f8c1722a478",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-009ede8b835b06c00",
              "eni-042d94b46c7b6926c"
            ],
            "owner_id": "940053359004",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-027a35265c428977a"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.64.175",
                "subnet_id": "subnet-0f055b2bd5e5b2799"
              },
              {
                "ipv4": "172.31.65.244",
                "subnet_id": "subnet-057cc109e4e13ddd8"
              }
            ],
            "subnet_ids": [
              "subnet-057cc109e4e13ddd8",
              "subnet-0f055b2bd5e5b2799"
            ],
            "tags": {
              "Name": "th-insights-ecr-dkr-endpoint-default"
            },
            "tags_all": {
              "Name": "th-insights-ecr-dkr-endpoint-default"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06887a73b54135881"
          },
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "default_to_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-050d6bbcc1a8e4675",
            "peer_owner_id": "940053359004",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-065aa991a66b783be",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "th-insights-peering"
            },
            "tags_all": {
              "Name": "th-insights-peering"
            },
            "vpc_id": "vpc-06887a73b54135881"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:internet-gateway/igw-0e5f75e9e4a672c8c",
            "id": "igw-0e5f75e9e4a672c8c",
            "owner_id": "940053359004",
            "tags": {
              "Name": "th-insights-igw"
            },
            "tags_all": {
              "Name": "th-insights-igw"
            },
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:route-table/rtb-0ca95861626d4f492",
            "id": "rtb-0ca95861626d4f492",
            "owner_id": "940053359004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5f75e9e4a672c8c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "th-insights-private-rt"
            },
            "tags_all": {
              "Name": "th-insights-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:route-table/rtb-0c3177adc9609e609",
            "id": "rtb-0c3177adc9609e609",
            "owner_id": "940053359004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0e5f75e9e4a672c8c",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "th-insights-public-rt"
            },
            "tags_all": {
              "Name": "th-insights-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d31078f1ccd14290",
            "route_table_id": "rtb-0ca95861626d4f492",
            "subnet_id": "subnet-0f4e1de1d4262d96a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d3e831c1be7a332",
            "route_table_id": "rtb-0ca95861626d4f492",
            "subnet_id": "subnet-0a160e1d249a778d4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068c6a12c81769fe6",
            "route_table_id": "rtb-0c3177adc9609e609",
            "subnet_id": "subnet-01fdbead85db93413"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4e05d070d06fdcf",
            "route_table_id": "rtb-0c3177adc9609e609",
            "subnet_id": "subnet-0065f01769bc5f7db"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:security-group/sg-06de4c037bb621eb5",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06de4c037bb621eb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "th-insights-alb-sg",
            "name_prefix": "",
            "owner_id": "940053359004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "th-insights-alb-sg"
            },
            "tags_all": {
              "Name": "th-insights-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:security-group/sg-0972cef0f89c9cc7a",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0972cef0f89c9cc7a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06de4c037bb621eb5"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06de4c037bb621eb5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "th-insights-ecs-sg",
            "name_prefix": "",
            "owner_id": "940053359004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "th-insights-ecs-sg"
            },
            "tags_all": {
              "Name": "th-insights-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:security-group/sg-0847a9c7f61bf4b53",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0847a9c7f61bf4b53",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0972cef0f89c9cc7a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "th-insights-rds-sg",
            "name_prefix": "",
            "owner_id": "940053359004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "th-insights-rds-sg"
            },
            "tags_all": {
              "Name": "th-insights-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:subnet/subnet-0f4e1de1d4262d96a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4e1de1d4262d96a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940053359004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "th-insights-private-subnet-1"
            },
            "tags_all": {
              "Name": "th-insights-private-subnet-1"
            },
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:subnet/subnet-0a160e1d249a778d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a160e1d249a778d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940053359004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "th-insights-private-subnet-2"
            },
            "tags_all": {
              "Name": "th-insights-private-subnet-2"
            },
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:subnet/subnet-01fdbead85db93413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fdbead85db93413",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940053359004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "th-insights-public-subnet-1"
            },
            "tags_all": {
              "Name": "th-insights-public-subnet-1"
            },
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:subnet/subnet-0065f01769bc5f7db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0065f01769bc5f7db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940053359004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "th-insights-public-subnet-2"
            },
            "tags_all": {
              "Name": "th-insights-public-subnet-2"
            },
            "vpc_id": "vpc-065aa991a66b783be"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:940053359004:vpc/vpc-065aa991a66b783be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096bb9382c145efb8",
            "default_route_table_id": "rtb-0a3b0327e1ddbd27c",
            "default_security_group_id": "sg-02ce259a99ce32343",
            "dhcp_options_id": "dopt-0dc85f74ba2ce800f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065aa991a66b783be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3b0327e1ddbd27c",
            "owner_id": "940053359004",
            "tags": {
              "Name": "th-insights-vpc"
            },
            "tags_all": {
              "Name": "th-insights-vpc"
            }
          }
        }
      ]
    }
  ]
}